--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Main</title>
+        <title>Portafolio web</title>
         <link href="estilo.css" rel="stylesheet">
     </head>
     
