--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
             <div></div>
             <h2>¡Conóceme!</h2>
            
-            <article>¿Tienes algún proyecto de diseño en mente? Te invito a seguirme en mis diferentes redes sociales y cuéntame sobre ello.</article>
+            <article>¿Tienes algún proyecto de diseño en mente? Te invito a seguirme en mis diferentes redes sociales y cuéntame sobre ello. Cinthia Janeth Gutierrez Cardenas 137792</article>
            
            <li><h3>Redes sociales</h3><br>
                     <ul id="redes"> 
