--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>book</title>
+        <title>Contacto</title>
         <link href="estilo3.css" rel="stylesheet">
     </head>
     
