--- a/book.html
+++ b/book.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>book</title>
+        <title>Book</title>
         <link href="estilo2.css" rel="stylesheet">
     </head>
     
