--- a/practicas.html
+++ b/practicas.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>practicas</title>
+        <title>Practicas</title>
         <link href="estilo2.css" rel="stylesheet">
     </head>
 
